Sonar trivia III